static/css/s2.css
/* ... */
.header > .ui-autocomplete {
  z-index: 1000 !important;
}
.ui-autocomplete .ui-menu-item {
  display: block;
  padding: 6px 12px;
}
.interface-hebrew .ui-autocomplete .ui-menu-item {
  direction: rtl;
  text-align: right;
}
.ui-autocomplete .ui-menu-item img {
  display: inline-block;
  opacity: .4;
  height: 18px;
  width: 18px;
}
.ui-autocomplete .ui-menu-item img.ac-img-User {
  opacity: 1;
}
.ui-autocomplete .ui-menu-item a {
  display: inline-block;
  line-height: 21px;
  font-size: 19px;
  color: #000;
  cursor: pointer;
  margin: 0 10px;
  vertical-align: top;
}
.ui-autocomplete .ui-menu-item.ui-state-focus {
  background: #EDEDEC;
}
.ui-helper-hidden-accessible {
  display: none;
}
.interface-hebrew .ui-autocomplete .ui-menu-item a {
  direction: rtl;
  text-align: right;
}
#globalWarningMessage {
  position: fixed;
  width: 100%;
  z-index: 1000;
  text-align: center;
  bottom: 0;
  color: white;
  background-color: #EFB4B6;
  padding: 14px 20px;
  box-sizing: border-box;
}
#globalWarningMessage .close {
 float: right;
 cursor: pointer;
 font-size: 20px;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
}
.readerPanelBox {
  position: absolute;
  height: 100%;
  width: 100%;
  direction: ltr; /* Even in Hebrew Interface we want scroll bars on the right */
}
.readerPanelBox + .readerPanelBox {
  border-left: 1px solid #eee;
}
.readerPanelBox.sidebar {
  border-left: none;
}
.readerPanel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: inherit;
}
.readerContent {
  width: 100%;
  height: calc(100% - 60px);
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.readerContent .readerError {
  padding: 100px 150px;
}
.readerContent .readerError .readerErrorText {
  padding-top: 20px;
  font-size: .8em;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  box-sizing: border-box;
  background-color: inherit;
}
.textColumn .loadingMessage.base,
.sheetsInPanel .loadingMessage {
  margin: 30px 0;
  color: #999;
  font-size: 16px;
  font-style: normal;
  text-align: center;
  padding: 0 6px 4px;
}
.textColumn .loadingMessage.base.prev {
  margin: 70px 0 0 0;
}
.textColumn .loadingMessage.base.next {
  margin: 30px 0 70px;
  height: calc(100% - 128px);  /* The 128px here appears to be the minimum needed to keep a line on the screen when scrolling passes loaded content) */
}
.textColumn .textRange.loading + .textRange.loading {
  display: none;
}
.int-he .int-he {
  font-size: inherit;
}
.readerPanel .content {
  direction: ltr; /* Even in Hebrew Interface, we want scroll bars on the right */
}
.readerPanel .he {
  direction: rtl;
  text-align: right;
}
.interface-hebrew .readerPanel .en {
  direction: ltr;
}
.interface-hebrew .readerPanel .contentInner,
.interface-hebrew .readerPanel .columnLayout,
.interface-hebrew .readerControls,
.interface-hebrew .readerPanel .textRange,
.interface-hebrew .readerPanel .sheetContent,
.interface-hebrew .readerPanel .readerNavMenu .gridBox,
.interface-hebrew .readerPanel.bilingual .readerNavMenu .gridBox,
.readerPanel.hebrew .readerNavSection,
.readerPanel.hebrew .readerNavMenu .gridBox {
  direction: rtl;
}
.interface-english .readerPanel.hebrew .readerNavMenu .readerTocResources .gridBox {
  direction: ltr;
}
.interface-english .readerPanel .readerNavMenu,
.readerPanel.english .readerNavSection,
.readerPanel.english .readerNavMenu .gridBox{
  direction: ltr;
}
.readerPanel.bilingual .readerNavSection,
.readerPanel.bilingual .readerNavMenu .gridBox {
  direction: ltr;
}
.readerPanel.english .he {
  display: none;
}
.readerPanel.english .he.heOnly{
  display: inline;
  text-align: right;
}
.readerPanel.english .en {
  display: inline;
}
.readerPanel.hebrew .he {
  display: inline;
  text-align: right;
}
.readerPanel .recentPanel .sheetLink.recentItem {
  font-family: var(--english-serif-font-family);
}
.readerPanel.hebrew .en {
  display: none;
}
.readerPanel.english .heOnly .he,
.readerPanel.bilingual .heOnly .he {
  display: inline;
}
.languageToggle {
  display: inline;
  line-height: 32px;
}
.languageToggle img {
  opacity: 0.4;
  height: 18px;
}
.loadingMessage {
  font-size: 14px;
  font-style: italic;
}
.bilingual .loadingMessage .he {
  display: none;
}
.readerPanel.light {
  background-color: white;
}
.readerPanel.sepia {
  background-color: #f7f7f7;
}
.readerPanel.dark {
  background-color: #333331;
}
.readerNavMenu,
.homeFeedWrapper {
  position: absolute;
  display: flex;
  flex-direction: column;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  z-index: 101;
}
.readerNavMenu .content,
.homeFeedWrapper .content {
  position: relative;
  box-sizing: border-box;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  font-size: 16px;
}
.readerNavMenu .content {
  padding: 60px 0 0 0;
}
.singlePanel .readerNavMenu .content {
  padding: 85px 0 0 0;
}
.singlePanel .readerNavMenu .categoryColorLine {
  top: 60px;
}
.singlePanel .readerNavMenu.readerTextTableOfContents:not(.bookPage) .content {
  padding-top: 25px;
}
.singlePanel .readerNavMenu.readerTextTableOfContents:not(.bookPage) .categoryColorLine {
  top: 0;
}
.readerNavMenu.compare .content,
.readerNavCategoryMenu.compare .content {
  padding: 30px 10px;
}
.readerNavMenu .content .contentInner {
  width: 680px;
  margin: 0 auto;
  min-height: 520px;
  max-width: 100%;
  box-sizing: border-box;
  padding-bottom: 70px;
}
.homeFeedWrapper .content .contentInner {
  max-width: none;
}
.homeFeedWrapper.userStats .content .contentInner {
  max-width: 660px;
  margin: 0 auto;
}
.navTitle {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 40px;
}
.navTitle.tight {
  margin-bottom: 15px;
}
.readerNavMenu .navTitle h1,
.singlePanel .readerNavMenu .navTitle h1 {
  margin-bottom: 0;
}
.navTitle + .dedication {
  margin-bottom: 20px;
}
/* ... */

